Fix issues with action menu on mobile.

--- a/tools/themes/mobile.css
+++ b/tools/themes/mobile.css
@@ -61,6 +61,10 @@ body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-t
   display: none;
 }
 
+body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .analyse__tools:has(.action-menu) {
+  min-height: 50vh;
+}
+
 body.lichessTools.lichessTools-theme_mobile.mobile main.analyse:not(.has-relay-tour) .action-menu {
   min-height: 50vh;
 }
@@ -114,13 +118,6 @@ body.lichessTools.lichessTools-theme_mobile.mobile label.hbg[for="tn-tg"]:after 
   justify-content: center;
   font-size: large;
 }
-
-/* removed because tapping the menu when computer eval is running is making the screen zoom in
-   but I don't remember what it was here in the first place
-body.lichessTools.lichessTools-theme_mobile.mobile main.analyse div.analyse__tools:has(.action-menu) {
-  overflow: visible;
-}
-*/
 
 body.lichessTools.lichessTools-theme_mobile.mobile main.analyse div.analyse__tools .explorer-box .moves tbody tr.sum {
   position: sticky;
